# dockerized-azure-etl

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
dags/: etl_dag.py
data/: wallet_activity.parquet
src/: extract.py  load.py  main.py  settings.py
src/schemas/: schema.py
src/utils/: client.py
terraform/: airflow-values.yaml  databricks_mount.tf  main.tf
tests/: test_extract.py
